<resources>
    <string name="app_name">Let\'s Eat</string>
    <string name="main_title">Find the best recipe 🧑‍🍳</string>
    <string name="search_results">Search results</string>
    <string name="search_placeholder">Enter recipe name...</string>
    <string name="recipe_details">Recipe details</string>
    <string name="detailed_serving_size">%1$d serving(s)</string>
    <string name="detailed_ingredients">Ingredients (%1$d)</string>
    <string name="instruction_title">Step %1$d/%2$d</string>
    <string name="start_cooking">Start cooking!</string>
    <string name="previous_btn">Previous</string>
    <string name="next_btn">Next</string>
    <string name="home_btn">Home</string>
    <string name="ingredient_input_placeholder">Enter ingredient name...</string>
    <string name="search_by_product_title">What\'s in your kitchen?</string>
    <string name="search_by_product_subtitle">Enter up to 3 ingredients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="nav_new">New</string>
    <string name="enter_image_url">Enter image URL...</string>
    <string name="next">Next</string>
    <string name="no_recipe_details">Recipe details not available</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="sign_up_subtitle">Enter your details to sign up</string>
    <string name="sign_up_title">Your healthy journey starts here 📈</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_title">Welcome back! 👋</string>
    <string name="login_subtitle">Enter your details to log in</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="plus">+</string>
    <string name="create">Create</string>
    <string name="saved_recipes_title">Saved recipes 🔖</string>
    <string name="add_recipe_title">Create a new recipe ⚗️</string>
    <string name="log_out">Log out</string>
</resources>